persist storage, init weather, style gh, filter hn

--- a/resources/newsconfig.edn.example
+++ b/resources/newsconfig.edn.example
@@ -1,1 +1,6 @@
-{:tw-users ["ransomwilliams"]}
+{:tw-users ["ransomwilliams"]
+ :gh-users ["ransomw"]
+ :github-auth ["YOUR_USERNAME" "YOUR_PASSWORD"]
+ :weather-coords [{:kid :palo-alto
+                   :lati "37.429167"
+                   :longi "-122.138056"}]}
